--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html lang="en">
 <head>
+  
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
 <body>
-  <h3>git hub</h3>
+  <h3 bg-color="red">git hub</h3 >
   <form id="my form">
     <input id="my input" type="text">
     <button>add</button>
