--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h3 bg-color="red">git hub</h3 >
+  <h3 style="color:red";>git hub</h3 >
   <form id="my form">
     <input id="my input" type="text">
     <button>add</button>
